...
@available(*, deprecated, message: "We intentionally use this deprecated API.")
class DialogViewController: UIViewController {
    var type: DialogType = .success
    
    private lazy var showButton: BPKObjcUIKitButton = {
        let button = BPKObjcUIKitButton(size: .large, style: .primary)
        button.title = "Show dialog"
        button.translatesAutoresizingMaskIntoConstraints = false
        button.addTarget(self, action: #selector(showDialog), for: .touchUpInside)
        
        return button
    }()
    
...
        }
    }
    
    private var dialogTitle: String {
        switch type {
        case .destructive:
            return "Delete"
        case .longTitle:
            return "Here is a very long title to see how it fits"
        default:
            return "Title in here"
        }
    }
...
