...
    self.scrimView = [[UIView alloc] initWithFrame:CGRectZero];
    self.scrimView.clipsToBounds = YES;
    self.scrimView.userInteractionEnabled = YES;
    self.scrimView.backgroundColor = self.scrimViewBackgroundColor;
    self.scrimView.alpha = 0.5;
    self.scrimView.translatesAutoresizingMaskIntoConstraints = NO;
    self.scrimView.accessibilityIdentifier = @"dialogScrimView";
    [self.scrimView addGestureRecognizer:tapGesture];

    self.dialogView = [[BPKDialogView alloc] initWithTitle:self.titleText
                                                   message:self.messageText
                                            iconDefinition:self.iconDefinition
                                               graphicView:self.graphicView
                                             textAlignment:self.textAlignment];
    self.dialogView.translatesAutoresizingMaskIntoConstraints = NO;
    self.dialogView.delegate = self;
    self.dialogView.accessibilityIdentifier = @"dialogView";

    self.dialogScrollView = [[UIScrollView alloc] initWithFrame:CGRectZero];
    self.dialogScrollView.translatesAutoresizingMaskIntoConstraints = NO;
    self.dialogScrollView.showsVerticalScrollIndicator = NO;
    self.dialogScrollView.showsHorizontalScrollIndicator = NO;
    self.dialogScrollView.alwaysBounceVertical = NO;
...
