...
            Group(name: "Chips") {
                ChipStory.allExamples
            }
            Group(name: "Flare views") {
                FlareStory.allExamples
            }
            Group(name: "Dialogs") {
                Group(name: "Alert") {
                    DialogStory.Alert.allExamples
                }
                Group(name: "Bottom sheet") {
                    DialogStory.BottomSheet.allExamples
                }
...
